# happening

./: .gitignore  .terraform.lock.hcl  Cargo.toml  Makefile  Rocket.toml  Rocket.toml.example  api.tf  auth.tf  dns.tf  gateway.tf  go.mod  go.sum  inputs.tf  main.tf  outputs.tf  template.yaml
backend/api/: main.go
backend/api/cmd/: main.go
backend/api/internal/: api.go  auth.go  db.go  permissions.go  subscription.go  twitch.go  user.go
backend/api/routes/: permissions.go  subscription.go  twitch.go  user.go
backend/auth/: main.go
backend/auth/cmd/: main.go
backend/cmd/deploy/: main.go
backend/cmd/local/: main.go
backend/internal/: api.go
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Auth.tsx  Brand.tsx  Eventsub.tsx  Links.tsx  User.tsx  index.tsx
frontend/src/components/: NavbarLink.tsx  SubscriptionAddForm.tsx  SubscriptionDeleteForm.tsx  SubscriptionForm.tsx  SubscriptionList.tsx
frontend/src/components/eventsub/: SubscriptionAddForm.tsx  SubscriptionDeleteForm.tsx  SubscriptionList.tsx
frontend/src/components/user/: UserForm.tsx  UserInfo.tsx  UserToIdForm.tsx
infra/: api.tf  auth.tf  inputs.tf
infra/beta/: api.tf  auth.tf
infra/prod/: auth.tf  dns.tf  dynamo.tf  inputs.tf
migrations/2022-12-09-190131_create_subscriptions/: up.sql
migrations/2022-12-11-150728_create_subscription/: down.sql  up.sql
scripts/: delete_sub_example.sh  get_subs_example.sh  with-prod-env.sh
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  twitch.rs  types.rs
src/ui/: Cargo.toml  index.html
src/ui/src/: main.rs
