[package]
name = "happening"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/server/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_cors = "0.5.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "2.0.2", features = ["sqlite"] }
dotenvy = "0.15"
twitch_api = "0.7.0-rc.2"


[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
