[package]
name = "happening"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
twitch_api = { version = "0.7.0-rc.2", features = ["client", "reqwest", "helix"] }
twitch_oauth2 = { version = "0.9.2", features = ["client", "reqwest"] }
reqwest = "0.11.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.66"
thiserror = "1.0.37"


[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
